v2/component/edit/edit-component.scss
edit-component {
    .fake-textarea {
        display: inline-block;
        background-color: white;
        width: 100%
    }
    .file-upload-button {
        position: relative;
        overflow: hidden;
        input {
            position: absolute;
            z-index: 100;
            top: 0;
            left: 0;
            font-size: 10em;
            opacity: .001;
        }
    }
    
    textarea {
        width: 100%;
        height: 10em;
    }

    .files > .file {
        position: relative;
        width: 33.33%;
        float: left;
        img {
            width: 100%;
        }
        .trash {
            position: absolute;
            left: .6em;
            bottom: .6em;
        }
    }
    .fake-textarea {
        background-color: white;
    }
}

